--- a/src/styles/VendorTransactionTable.css
+++ b/src/styles/VendorTransactionTable.css
@@ -252,7 +252,7 @@
 }
 
 .vendor-transaction-table td.highlight-yellow {
-  background-color: #ffff00;
+  background-color: #c1e49a;
   font-weight: 600;
 }
 
